--- a/PruebasArcGIS_1005/app/src/main/res/values/strings.xml
+++ b/PruebasArcGIS_1005/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">PruebasArcGIS_100.5</string>
     <string name="action_settings">Settings</string>
+
+    <string name="service_layer_url">http://sampleserver6.arcgisonline.com/arcgis/rest/services/DamageAssessment/FeatureServer/0</string>
+    <string name="feature_added">Feature successfully added</string>
+
+    <string name="error_cannot_add_to_feature_table">Cannot add a feature to this feature table</string>
+    <string name="error_applying_edits">Exception applying edits on server: %s</string>
 </resources>
